# OVManager

./: .dockerignore  .env.example  .gitignore  Dockerfile  OVNode  OVNode2  README.md  SECURITY_REVIEW.md  UI_IMPROVEMENTS.md  docker-compose.yml  docker-entrypoint.sh  index.html  install.sh  installer.py  main.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  config.py  tls_config.py
backend/alembic/versions/: c7d8e9f0a1b2_add_username_prefix_and_telegram_id.py  d8e9f0a1b2c3_move_username_prefix_to_admins.py  e9f0a1b2c3d4_add_owner_telegram_id_to_settings.py
backend/auth/: auth.py  authz.py
backend/db/: crud.py  engine.py  models.py
backend/node/: requests.py  task.py
backend/operations/: audit.py  metrics.py
backend/routers/: __init__.py  activity.py  admins.py  maintenance.py  metrics.py  mlogin.py  node.py  notifications.py  security.py  setting.py  sub.py  users.py
backend/schema/: _input.py  output.py
bot/: Dockerfile  config.py  handlers.py  main.py  ovmanager.py  pyproject.toml
docs/: multi-login.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  index.css  main.jsx  styles-premium.css  styles.css
frontend/src/components/: AddAdminModal.jsx  AddNodeModal.jsx  AddUserModal.jsx  AdminTable.jsx  EditAdminModal.jsx  EditNodeModal.jsx  EditUserModal.jsx  ErrorBoundary.jsx  LoadingButton.jsx  Logo.jsx  MobileNav.jsx  (+8 more)
frontend/templates/: subscription.html
scripts/: backup-ov-db.py  restart-ov.sh
shared/: uuid_cn.py
tests/: test_app.py  test_smoke.py
(+24 files in other folders)
