[project]
name = "ovmanager"
version = "1.4.0"
description = "An OpenVPN client management panel on the server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "requests",
    "pydantic_settings",
    "alembic==1.15.1",
    "SQLAlchemy==2.0",
    "python-dotenv==1.1.0",
    "pexpect",
    "psutil",
    "passlib",
    "pyjwt",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    "apscheduler",
    "colorama",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "httpx",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true